--- a/package.json
+++ b/package.json
@@ -32,8 +32,6 @@
         "css-loader": "^2.1.0",
         "file-loader": "^3.0.1",
         "html-webpack-plugin": "^3.2.0",
-        "less": "^3.9.0",
-        "less-loader": "^4.1.0",
         "mini-css-extract-plugin": "^0.5.0",
         "node-sass": "^4.11.0",
         "optimize-css-assets-webpack-plugin": "^5.0.1",
@@ -49,10 +47,16 @@
         "@alifd/next": "^1.11.11",
         "@babel/polyfill": "^7.2.5",
         "@babel/runtime": "^7.3.1",
+        "@rematch/core": "^1.0.6",
+        "@rematch/loading": "^1.1.2",
+        "connected-react-router": "^6.2.2",
+        "history": "^4.7.2",
         "moment": "^2.24.0",
         "prop-types": "^15.6.2",
         "react": "^16.7.0",
         "react-dom": "^16.7.0",
-        "react-router-dom": "^4.3.1"
+        "react-redux": "^6.0.0",
+        "react-router-dom": "^4.3.1",
+        "redux": "^4.0.1"
     }
 }
