--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "@babel/preset-react": "^7.0.0",
         "babel-loader": "^8.0.5",
         "babel-plugin-import": "^1.11.0",
+        "copy-webpack-plugin": "^4.6.0",
         "cross-env": "^5.2.0",
         "css-loader": "^2.1.0",
         "eslint": "^5.12.1",
