--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
         "@babel/runtime": "^7.3.1",
         "@rematch/core": "^1.0.6",
         "@rematch/loading": "^1.1.2",
+        "add-asset-html-webpack-plugin": "^3.1.2",
         "babel-eslint": "^10.0.1",
         "connected-react-router": "^6.2.2",
         "history": "^4.7.2",
@@ -73,6 +74,7 @@
         "prop-types": "^15.6.2",
         "react": "^16.7.0",
         "react-dom": "^16.7.0",
+        "react-loadable": "^5.5.0",
         "react-redux": "^6.0.0",
         "react-router-dom": "^4.3.1",
         "redux": "^4.0.1"
