添加clean脚本, 防止打包文件覆盖

--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
     "description": "自用中台项目脚手架",
     "main": "index.js",
     "scripts": {
+        "clean": "rimraf build",
         "lint": "eslint .",
         "lint:fix": "npm run lint -- --fix",
         "dll": "webpack --config ./scripts/pack.dll.js",
         "dev": "cross-env NODE_ENV=development webpack-dev-server --config ./scripts/pack.dev.js",
-        "build": "cross-env NODE_ENV=production webpack --config ./scripts/pack.build.js"
+        "build": "npm run clean && cross-env NODE_ENV=production webpack --config ./scripts/pack.build.js"
     },
     "repository": {
         "type": "git",
@@ -52,6 +53,7 @@
         "node-sass": "^4.11.0",
         "optimize-css-assets-webpack-plugin": "^5.0.1",
         "pre-commit": "^1.2.2",
+        "rimraf": "^2.6.3",
         "sass-loader": "^7.1.0",
         "style-loader": "^0.23.1",
         "terser-webpack-plugin": "^1.2.1",
