--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
         "pack:win": "electron-builder --win",
         "pack:linux": "electron-builder --linux",
         "prepack:all": "npm run build:electron",
-        "pack:all": "electron-builder -mwl"
+        "pack:all": "electron-builder -mwl",
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d build"
     },
     "repository": {
         "type": "git",
@@ -30,7 +32,7 @@
     "bugs": {
         "url": "https://github.com/rmlzy/admin-starter/issues"
     },
-    "homepage": "https://github.com/rmlzy/admin-starter#readme",
+    "homepage": "https://rmlzy.github.io/admin-starter",
     "devDependencies": {
         "@babel/cli": "^7.2.3",
         "@babel/core": "^7.2.2",
@@ -58,6 +60,7 @@
         "eslint-plugin-react": "^7.12.4",
         "eslint-plugin-standard": "^4.0.0",
         "file-loader": "^3.0.1",
+        "gh-pages": "^2.0.1",
         "html-webpack-plugin": "^3.2.0",
         "mini-css-extract-plugin": "^0.5.0",
         "node-sass": "^4.11.0",
