--- a/.eslintrc
+++ b/.eslintrc
@@ -17,6 +17,7 @@
         // allow specifying true explicitly for boolean props
         "react/jsx-boolean-value": 0,
         "generator-star-spacing": "off",
+        "no-multi-spaces": 0,
         "max-lines": [
             "error",
             {
