--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
         "prepack:all": "npm run build:electron",
         "pack:all": "electron-builder -mwl",
         "predeploy": "npm run build",
-        "deploy": "gh-pages -d build"
+        "deploy": "gh-pages -d build",
+        "g": "npm run generate",
+        "generate": "plop --plopfile ./generators/index.js"
     },
     "repository": {
         "type": "git",
@@ -65,6 +67,7 @@
         "mini-css-extract-plugin": "^0.5.0",
         "node-sass": "^4.11.0",
         "optimize-css-assets-webpack-plugin": "^5.0.1",
+        "plop": "^2.2.0",
         "pre-commit": "^1.2.2",
         "rimraf": "^2.6.3",
         "sass-loader": "^7.1.0",
