--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "build": "npm run clean && cross-env NODE_ENV=production webpack --config ./scripts/pack.build.js",
         "build:electron": "npm run clean && cross-env NODE_ENV=production webpack --config ./scripts/pack.electron.js",
         "electron-dev": "concurrently \"BROWSER=none npm run dev\" \"wait-on http://localhost:8088 && electron .\"",
+        "postinstall": "electron-builder install-app-deps",
         "pack:mac": "electron-builder --mac",
         "pack:win": "electron-builder --win",
         "pack:linux": "electron-builder --linux",
